--- a/react-hearthstone/src/App.css
+++ b/react-hearthstone/src/App.css
@@ -2,7 +2,9 @@
 
 .App {
   /* text-align: center; */
-  background-color: blanchedalmond;
+  display: flex;
+  width: 100vw;
+  height: auto;
   font-family: 'Noto Sans', sans-serif;
   -webkit-text-size-adjust: 100%;
 }
@@ -12,16 +14,16 @@
   
 }
 .cards-text{
-  display: flex;
+  /* display: flex; */
   position: relative;
   font-size: .8em;
   color: rgb(128, 128, 128);
 }
-.class-image-container{
+/* .class-image-container{
   height: 100%;
   width: 10%;
   display: inline;
-}
+} */
 .card-icon-image{
   height: 34px;
   width: 34px;
@@ -33,10 +35,13 @@
 }
 .tier-container{
   background-color: rgb(241, 242, 244);
-  max-width: 70%;
+  /* max-width: 120%; */
+  width: 200%;
   border-bottom: 1px solid black;
   margin-bottom: 10px;
-  margin-left: 10px;
+}
+.core-cards-and-icons{
+  margin-left: 20%;
 }
 .tier-header{
   padding-left: 1.5%;
@@ -46,10 +51,39 @@
   color: rgb(255, 255, 255);
 }
 .deck-container{
+  display: flex;
+  /* position: relative; */
+  
   border: 1px solid black;
+  /* padding: 1% 1%; */
+}
+.img-container{
+  position: relative;
+}
+.deck-container-img{
+  position: absolute;
+  left: 100%;
+  /* height:200%; */
+  width: 300%;
+  -webkit-mask-image: -webkit-gradient(linear, right center, center center, 
+    from(rgba(0,0,0,0)), to(rgba(0,0,0,1)));
+  -webkit-mask-image: -webkit-gradient(linear, left center, center center, 
+    from(rgba(0,0,0,0)), to(rgba(0,0,0,1)));
+  /* background-position: 0 -62px; 
+  background-repeat: no-repeat; */
+  
+}
+.class-image-icon{
+  position: relative;
+  padding: 15%;
+  display: inline;
+}
+.view-deck{
+  margin-left: 15%;
+  margin-right: 0;
 }
 .cards-text{
-  position: relative;
+  /* position: relative; */
 }
 .tier1{
   
